force-app/main/default/objects/Regression_Test_Suite__c/Regression_Test_Suite__c.object-meta.xml
<CustomObject>
    <description>Defines a collection of regression test cases for a specific Salesforce product or package.</description>
    <label>Regression Test Suite</label>
    <nameField>
        <label>Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regression Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <!-- TODO: Add Total_Test_Cases__c (RollupSummary COUNT of Regression_Test_Case__c) after Master-Detail relationship is deployed -->
</CustomObject>