force-app/main/default/objects/Regression_Test_Suite__c/fields/Cascade_Mode__c.field-meta.xml
<CustomField>
    <fullName>Cascade_Mode__c</fullName>
    <description>Controls how layer failures affect subsequent layers. Strict: any blocking layer failure skips remaining. Continue: run all layers regardless.</description>
    <inlineHelpText>Strict = skip remaining layers on blocking failure. Continue = run all layers regardless.</inlineHelpText>
    <label>Cascade Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
                <default>true</default>
                <label>Continue</label>
            </value>
            <value>
                <fullName>Strict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>