force-app/main/default/objects/Regression_Test_Suite__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Run</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>