force-app/main/default/objects/Regression_Test_Suite__c/fields/Product_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Product_Namespace__c</fullName>
    <description>Namespace prefix of the product being tested</description>
    <label>Product Namespace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>