force-app/main/default/objects/Regression_Test_Suite__c/fields/Target_Org__c.field-meta.xml
<CustomField>
    <fullName>Target_Org__c</fullName>
    <description>Org alias or username</description>
    <label>Target Org</label>
    <length>100</length>
    <type>Text</type>
</CustomField>