force-app/main/default/objects/Regression_Test_Suite__c/listViews/Active_Suites.listView-meta.xml
<ListView>
    <fullName>Active_Suites</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Version__c</columns>
    <columns>Target_Org__c</columns>
    <columns>Last_Run_Date__c</columns>
    <columns>Last_Run_Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Suites</label>
</ListView>