force-app/main/default/objects/Regression_Test_Suite__c/listViews/Failed_Last_Run.listView-meta.xml
<ListView>
    <fullName>Failed_Last_Run</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Version__c</columns>
    <columns>Last_Run_Date__c</columns>
    <columns>Last_Run_Status__c</columns>
    <columns>Target_Org__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Run_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Last Run</label>
</ListView>